--- a/thanks.html
+++ b/thanks.html
@@ -38,7 +38,8 @@
     </main>
  
     <footer>
-        <div class="p"><img src="images/logo.png" alt="logo" class="logo"></div>
+        <div class="footer">
+            <div class="p"><img src="images/logo.png" alt="logo" class="logo"></div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
             <p>City, State Zip </p>
@@ -48,10 +49,22 @@
             <p><a href="index.html">+1(999)999-9999</a></p>
             <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
         </div>
+        </div>
+        <div class="flex-container2">
+            <p class="a">&copy;<span id="demo2"></span> .:|:.Dayan F. Frazao .:|:. WDD 230 project</p>
+            <p class="f">last update: <span id="d2"></span></p>
+        </div>
+        <script src="js/weather.js"></script>
+        <script src="js/date.js">
+        </script>
         <script src="js/id.js">
         </script>
         <script src="js/ws.js">
         </script>
+        <script src="js/jsh.js">
+        </script>
+        <!---<script src="js/ws.js"></script>--->
+       
     </footer>
 
 </body>
