--- a/directory.html
+++ b/directory.html
@@ -25,16 +25,19 @@
         <button id="ham">&#9776;</button>
         <ul id="pn">
             <li><a href="index.html">Home-page</a></li>
+            <li><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
-            <li class="active"><a href="condensation.html">Directory</a></li>
+            <li class="active"><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
 
     <main>
-        <button id="submit">m1</button>
-        <button id="submit2">m2</button>
+        <div class="buttons">
+            <button id="grid">⏹️Grid</button>
+            <button id="list">📄List</button>
+        </div>
         <div id="cards">
         </div>
         <footer>
@@ -65,6 +68,8 @@
             <script src="js/ws.js">
             </script>
             <script src="js/jsh.js">
+            </script>
+            <script src="js/jst.js">
             </script>
             <!---<script src="js/ws.js"></script>--->
            
