--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
             <li><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="directory.html">Directory</a></li>
-            <li class="active"><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>    
+            <li><a href="join.html">Join</a></li>
+            <li class="active"><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
 
