--- a/contact.html
+++ b/contact.html
@@ -36,54 +36,47 @@
     </nav>
 
     <main>
-        <div>
-            <form method="get" action="thanks.html">
-                <fieldset>
-                    <legend>applicant info</legend>
-                    <label class="top">
-                        First Name*<input type="text" name="fname" required> 
-                    </label>
-                    <label class="top">
-                        Last Name*<input type="text" name="fname" required> 
-                    </label>
-                    <label class="top">
-                        phone<input type="tel" name="phone" placeholder="12345666"> 
-                    </label>
-                    <label class="top">
-                        Email*<input type="email" name="email" placeholder="someone@gmail.com" required> 
-                    </label>
-                </fieldset>
-                <fieldset>
-                    <legend>business info</legend>
-                    <label class="top">
-                        Business Address<input type="text" name="b/a" placeholder=""> 
-                    </label>
-                    <label class="top">
-                        Business Name/Title<input type="text" name="bn/t" required> 
-                    </label>
-                    <label class="top">
-                        Business Website<input type="url" name="bw" placeholder="http://..."> 
-                    </label>
-
-                    <label id="desc2" class="top">
-                        Business Description<textarea class="desc" type="text" name="bd"></textarea>
-                    </label>
-                </fieldset>
-                <fieldset>
-                        <legend>Membership</legend>
-                    <div>Membership-level</div>
-                    <label class="sbs"><input type="radio" name="audience" value="beginner">Non-profit(For Non Profit Organizations - No Fee)</label>
-                    <label class="sbs"><input type="radio" name="audience" value="intermidiate">Bronze(Regular Membership Benefits - $50)</label>
-                    <label class="sbs"><input type="radio" name="audience" value="advanced">Silver(Regular Membership + Exclusive V.I.P Service- $100)</label>
-                    <label class="sbs"><input type="radio" name="audience" value="advanced">Gold(All Silver Membership Privileges +  Additional High Quality Content- $200)</label>
-                    <!--<div>software needed</div>
-                    <label class="sbs"><input type="checkbox" name="editting" value="yes">Photo Editting</label>
-                    <label class="sbs"><input type="checkbox" name="code" value="yes">Coding</label>
-                    <label class="sbs"><input type="checkbox" name="process" value="yes">Preprocessor</label>
-                    <label class="sbs"><input type="checkbox" name="client" value="yes">FTP client</label>-->
-                </fieldset>
-                <input type="submit" value="Join" class="submitBtn">
-            </form>
+        <div class="dirg">
+            <div class="coisa1">
+                <form method="get" action="thanks2.html">
+                    <fieldset>
+                        <legend>Contact Info</legend>
+                        <label class="top">
+                            First Name*<input type="text" name="fname" required> 
+                        </label>
+                        <label class="top">
+                            Last Name*<input type="text" name="fname" required> 
+                        </label>
+                        <label class="top">
+                            phone<input type="tel" name="phone" placeholder="12345666"> 
+                        </label>
+                        <label class="top">
+                            Email*<input type="email" name="email" placeholder="someone@gmail.com" required> 
+                        </label>
+                        <label id="desc2" class="top">
+                            write your Questions/Comments/Concerns<textarea class="desc" type="text" name="bd"></textarea>
+                        </label>
+                    <input type="submit" value="Send Contact" class="submitBtn">
+                </form>
+            </div>
+            <div class="coisa2">
+                <h1>Goiania Chamber of Commerce</h1>
+                <h1>phone number: +55 62 999-9999</h1>
+                <a href="https://accounts.google.com/b/0/AddMailService">email: goianiachamber@gmail.com</a>
+            </div>
+            <div class="coisa3">
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                    <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=goiania&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+    
+                    </iframe>
+                    <a href="https://fmovies-online.net">fmovies</a>
+                    <br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style>
+                    <a href="https://www.embedgooglemap.net">google maps api html</a>
+                    <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+                </div>
+            </div>
+            </div>
         </div>
     </main>
  
