--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
-            <li class="active"><a href="collection.html">Contact</a></li>    
+            <li class="active"><a href="contact.html">Contact</a></li>    
         </ul>
     </nav>
 
