--- a/dicoverychannel.html
+++ b/dicoverychannel.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<header>
-	<img src="images/logo.png" alt="logo" class="logo">
+        <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
     <div><h1>Goiania chamber of commerce</h1>
         <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
         <nav class="date"><span id="omed"></span>,<span id="om"></span> <span id="o"></span>,<span id="year"></span></nav>
@@ -85,7 +85,9 @@
  
     <footer>
         <div class="footer">
-            <div class="p"><img src="images/logo.png" alt="logo" class="logo"></div>
+            <div class="p">
+                <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
+            </div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
             <p>City, State Zip </p>
