--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="grid-container">
             <div class="item1"><section><h1>Events</h1>
                 <p>Join us in these weekend for these amazing soccer game</p>
-            <a href="">more_info</a></section></div>
+            <a href="contact.html">more_info</a></section></div>
             <div class="item2">
                 <section class="box"><p>Welcome to Goiania</p>
-                    <button>join the Chamber</button></section>
+                    <button class="cli2" onclick="window.location.href='join.html';">join the Chamber</button></section>
             </div>
             <div class="item3">
                </div>  
@@ -74,7 +74,7 @@
                 <p>999-9999</p>
             </section></div>
             <div class="item6"><section><p>became a member of goiania moutain Chamber</p>
-            <button>join us</button></section></div>
+            <button class="cli" onclick="window.location.href='join.html';">join us</button></section></div>
             <div class="item7"><section><h1>New release</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi possimus quidem odio quis aut totam accusantium pariatur! Fuga ex rem dignissimos placeat aliquid, fugiat sunt atque inventore fugit laborum!</p></section></div>
           </div>
     </main>
