--- a/index.html
+++ b/index.html
@@ -55,15 +55,19 @@
             <div class="item3">
                </div>  
         <!---weather thing-->
-            <div class="item4"><section><h1 class="h">weather</h1>
+            <div class="item4">
+                <section>
+                    <h1 class="h">weather</h1>
                 <div class="thing">
                     <img id="weather_icon" src="images/placeholder.png" alt="current weather">
                     <p class="will"><span id="currentTemp"></span>&deg;F</p>
                 </div>
-                <figcaption class="i"></figcaption>
+                <figure>
+                    <figcaption></figcaption>
+                </figure>
                 <p>Wind Speed: <span id="currentspeed"></span>mph</p> 
                 <p id="chill">message</p>
-            </section>
+                </section>
             </div>
         <!---weather thing-->
             <div class="item5"><section>
