--- a/join.html
+++ b/join.html
@@ -66,7 +66,7 @@
                     </label>
 
                     <label id="desc2" class="top">
-                        Business Description<textarea class="desc" type="text" name="bd"></textarea>
+                        Business Description<textarea class="desc" name="bd"></textarea>
                     </label>
                 </fieldset>
                 <fieldset>
