--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                             Email*<input type="email" name="email" placeholder="someone@gmail.com" required> 
                         </label>
                         <label id="desc2" class="top">
-                            write your Questions/Comments/Concerns<textarea class="desc" type="text" name="bd"></textarea>
+                            write your Questions/Comments/Concerns<textarea class="desc" name="bd"></textarea>
                         </label>
                     <input type="submit" value="Send Contact" class="submitBtn">
                     <div class="coisa2">
@@ -62,18 +62,18 @@
                         <h1>phone number: +55 62 999-9999</h1>
                         <a href="https://accounts.google.com/b/0/AddMailService">email: goianiachamber@gmail.com</a>
                     </div>
+                    </fieldset>
                 </form>
             </div>
             <div class="coisa3">
                 <div class="mapouter">
                     <div class="gmap_canvas">
-                    <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=goiania&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                    <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=goiania&t=&z=13&ie=UTF8&iwloc=&output=embed">
     
                     </iframe>
                     <a href="https://fmovies-online.net">fmovies</a>
-                    <br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style>
+                    <br>
                     <a href="https://www.embedgooglemap.net">google maps api html</a>
-                    <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
                 </div>
             </div>
             </div>
@@ -108,7 +108,6 @@
         </script>
         <script src="js/jsh.js">
         </script>
-        <!---<script src="js/ws.js"></script>--->
        
     </footer>
 
