--- a/dicoverychannel.html
+++ b/dicoverychannel.html
@@ -47,11 +47,11 @@
                 <p class="title">Praca dos tres poderes</p>
             <p>It a pretty famous statue that simbolizes the three races that our demoghrapic is composed.</p>
             </div>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/download-min.jpg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196).png" alt="Praca dos tres poderes" data-src="img_go/download-min.jpg" loading="lazy" class="images"></picture>
         </section>
 
         <section class="flex2">
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/lago_das_rosas.jpeg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196).png" alt="Lago Das Rosas" data-src="img_go/lago_das_rosas.jpeg" loading="lazy" class="images"></picture>
             <div class="decoration">
                 <p class="title">Lago Das Rosas</p>
                 <p>This a big natural park that people like to hang out with their families there</p>
@@ -64,10 +64,10 @@
                 <p class="title">Memorial Do Cerrado</p>
             <p>Its a memorial of the natural enviroment that is predominent in the city of goias</p>
             </div>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mem_cer.jpg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196).png" alt="Memorial Do Cerrado" data-src="img_go/mem_cer.jpg" loading="lazy" class="images"></picture>
         </section>
         <section class="flex4">
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mercado_central.jpg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196).png" alt="Mercado Central" data-src="img_go/mercado_central.jpg" loading="lazy" class="images"></picture>
             <div class="decoration">
                 <p class="title">Mercado Central</p>
                 <p>Its a big famous market in the city, where people go to buy stuff for a cheap price</p> 
@@ -78,7 +78,7 @@
                 <p class="title">Tres Marcos</p>
             <p>It is a famous monument in the city that points directions and it is a nice place to take pictures</p>
             </div>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/tres.jpg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196).png" alt="Tres Marcos" data-src="img_go/tres.jpg" loading="lazy" class="images"></picture>
         </section>
     </div>
     </main>
