--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </section></div>
             <div class="item6"><section><p>became a member of goiania moutain Chamber</p>
             <button class="cli" onclick="window.location.href='join.html';">join us</button></section></div>
-            <div class="item7"><section><h1>New release</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi possimus quidem odio quis aut totam accusantium pariatur! Fuga ex rem dignissimos placeat aliquid, fugiat sunt atque inventore fugit laborum!</p></section></div>
+            <div class="item7"><section><h1>New release</h1><p>the purpose of this site is to attract tourism, additional business, and people, and our goal is to help alot of people to have a great time in the city og Goiania</p></section></div>
           </div>
     </main>
  
@@ -109,6 +109,8 @@
         <script src="js/id.js">
         </script>
         <script src="js/jsh.js">
+        </script>
+        <script src="js/dc.js">
         </script>
         <!---<script src="js/ws.js"></script>--->
        
