--- a/contact.html
+++ b/contact.html
@@ -85,12 +85,12 @@
             <div class="p">
                 <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
             </div>
-        <div><p>Goiania Chamber of Commerce</p>
+        <div><p>Bountiful Foods</p>
             <p>Address line 1</p>
-            <p>City, State Zip </p>
+            <p>City, State Zip</p>
         </div>
         <div class="links">
-                <p><a href="index.html">info@goianiachamber.org</a></p>
+                <p><a href="index.html">info@BountifulFoods.org</a></p>
             <p><a href="index.html">+1(999)999-9999</a></p>
             <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
         </div>
