--- a/join.html
+++ b/join.html
@@ -73,7 +73,7 @@
         <div>
            
                    
-                <section><div><button onclick="clickCounter()" id="submit">finish order</button></div></section>
+                <section><div><button onclick="clickCounter()" id="submit">finish order.</button></div></section>
 
     </main>
     <section id="detisenhorcareco">
