--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
         <a href="index.html"><img src="css/Screenshot (260)-min.png" alt="logo" class="logo"></a>
     <div><h1>Bountiful Foods</h1>
-        <h2>"Fresh fruits and drinks available to everyone"</h2></div>
+        <h2>"Fresh fruits and drinks available to everyone."</h2></div>
         <nav class="date">  <span id="omed">  </span>, <span id="om">  </span> <span id="o">  </span>, <span id="year">  </span></nav>
     </header>
     <nav>
