--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<header>
-        <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="css/newl.png" alt="logo" class="logo"></a>
     <div><h1>Goiania chamber of commerce</h1>
         <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
         <nav class="date">  <span id="omed">  </span>, <span id="om">  </span> <span id="o">  </span>, <span id="year">  </span></nav>
@@ -106,7 +106,7 @@
     <footer>
         <div class="footer">
             <div class="p">
-                <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
+                <a href="index.html"><img src="css/newl.png" alt="logo" class="logo"></a>
             </div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
@@ -116,8 +116,22 @@
                 <p><a href="index.html">info@goianiachamber.org</a></p>
             <p><a href="index.html">+1(999)999-9999</a></p>
             <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
+            <div class="social"> 
+                <a href="https://facebook.com" target="_blank">
+                <img src="css/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+            <img src="css/twitter.png" alt="twitter icon">
+             </a>
+             <a href="https://instagram.com" target="_blank">
+             <img src="css/instagram.png" alt="instagram icon"> 
+             </a>
+            </div>
         </div>
         </div>
+
+        </div>
+
         <div class="flex-container2">
             <p class="a">&copy;<span id="demo2"></span> .:|:.Dayan F. Frazao .:|:. WDD 230 project</p>
             <p class="f">last update: <span id="d2"></span></p>
