--- a/contact.html
+++ b/contact.html
@@ -26,19 +26,24 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
+            <li><a href=""></a></li>
             <li><a href="index.html">Home-page</a></li>
-            <li><a href="index.html">Home-page</a></li>
-            <li><a href="dicoverychannel.html">Discover</a></li>
-            <li ><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>    
+            <li><a href="join.html">Fresh-Page</a></li>
+            <li class="active"><a href="contact.html">Contact Us</a></li>    
         </ul>
     </nav>
 
     <main>
+        <section class="flex1">
+            <div class="decoration">
+                <p class="title">Praca dos tres poderes</p>
+            <p>It a pretty famous statue that simbolizes the three races that our demoghrapic is composed.</p>
+            </div>
+            <picture><img src="images/Screenshot(196).png" alt="Praca dos tres poderes" data-src="images/carlsbad.jpg" loading="lazy" class="images"></picture>
+        </section>
         <div class="dirg">
             <div class="coisa1">
-                <form method="get" action="thanks2.html">
+                <form method="get" action="thanks2.html" >
                     <fieldset>
                         <legend>Contact Info</legend>
                         <label class="top">
@@ -54,7 +59,7 @@
                             Email*<input type="email" name="email" placeholder="someone@gmail.com" required> 
                         </label>
                         <label id="desc2" class="top">
-                            write your Questions/Comments/Concerns<textarea class="desc" name="bd"></textarea>
+                            write your Questions/Comments/Concerns<textarea  class="desc" name="bd"></textarea>
                         </label>
                     <input type="submit" value="Send Contact" class="submitBtn">
                     <div class="coisa2">
@@ -95,13 +100,13 @@
             <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
             <div class="social"> 
                 <a href="https://facebook.com" target="_blank">
-                <img src="css/facebook.png" alt="fb icon">
+                <img src="css/facebook.png" alt="fb icon" class="s-l">
             </a>
             <a href="https://twitter.com" target="_blank">
-            <img src="css/twitter.png" alt="twitter icon">
+            <img src="css/twitter.png" alt="twitter icon" class="s-l">
              </a>
              <a href="https://instagram.com" target="_blank">
-             <img src="css/instagram.png" alt="instagram icon"> 
+             <img src="css/instagram.png" alt="instagram icon" class="s-l"> 
              </a>
             </div>
         </div>
