--- a/dicoverychannel.html
+++ b/dicoverychannel.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Fill Me In">
 <meta name="author" content="Dayan Frazao">
 <title>Goiania chamber of commerce</title>
-
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Open+Sans:wght@300&family=Roboto:ital,wght@1,300&family=Rock+Salt&family=Signika:wght@300&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="css_dc/small.css" rel="stylesheet">
 <link href="css_dc/medium.css" rel="stylesheet">
@@ -37,7 +37,7 @@
                 <p class="title">historical information summary</p>
             <p>Carlsbad has been historycally known for being a good place for turists all around the world that are searching for a good place to stay in their vacations</p>
             </div>
-            <picture><img src="images/Screenshot(196).png" alt="Carlsbad CA" data-src="images/carlsbad-min.jpg" loading="lazy" class="images"></picture>
+            <picture><img src="images/Screenshot(196)-min.png" alt="Carlsbad CA" data-src="images/back.png" loading="lazy" class="images"></picture>
         </section>
  <div class="gridizao">
         <section>
@@ -119,17 +119,17 @@
         <script src="scripts/index.js">
             </script>
         </div>
-        <script src="js/weather.js"></script>
+        <!--<script src="js/weather.js"></script>-->
         <script src="js/date.js">
         </script>
         <script src="js/id.js">
         </script>
-        <script src="js/ws.js">
-        </script>
-        <script src="js/jsh.js">
-        </script>
-        <script src="js/json.js">
-        </script>
+        <!--<script src="js/ws.js">
+        </script>-->
+        <!--<script src="js/jsh.js">
+        </script>-->
+        <!--<script src="js/json.js">
+        </script>-->
         <script src="js/dc.js">
         </script>
         <!---<script src="js/ws.js"></script>--->
